gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue21203.d
version https://git-lfs.github.com/spec/v1
oid sha256:703c1d9bea64c09e16c2f1f2231771ec9fef16570436ec7a718418d196b1f2fe
size 401
